# enclave

./: .clinerules  .coderabbit.yaml  .deleteme  .dockerignore  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  Architecture.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS_ROOT.md  LICENSE.md  README.md  SHA256SUMS  SOURCE_HASH  TEST_CASE.md  build.rs  checksums.json  dep.sh  docker-build.sh  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  enclave.sh  eslint.config.mjs  fhe.md  flake.nix  install  logs.txt  logs_c0c3_debug.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result  run_nodes.sh  (+1 more)
crates/aggregator/: AggregationSystem.md  CHANGELOG.md  Cargo.toml
crates/aggregator/docs/: PlaintextAggregator.md  PublickeyAggregator.md
crates/aggregator/src/: committee.rs  committee_finalizer.rs  committee_hash.rs  decryptionshare_created_buffer.rs  ext.rs  keyshare_created_filter_buffer.rs  lib.rs  plaintext_aggregator.rs  proof_fold.rs  publickey_aggregator.rs  repo.rs  test_req_res.rs  threshold_plaintext_aggregator.rs
crates/bfv-client/: Cargo.toml
crates/bfv-client/src/: client.rs  lib.rs
crates/bfv-helpers/: CHANGELOG.md  Cargo.toml
crates/bfv-helpers/src/: client.rs  lib.rs  util.rs
crates/bitquery/: Cargo.toml
crates/bitquery/src/: lib.rs
crates/ciphernode-builder/: Cargo.toml
crates/ciphernode-builder/src/: ciphernode.rs  ciphernode_builder.rs  event_system.mmd  event_system.rs  eventbus_factory.rs  evm_system.rs  global_eventstore_cache.rs  global_store_cache.rs  lib.rs  provider_caches.rs  sync_builder.rs
crates/cli/: CHANGELOG.md  CLI.md  Cargo.toml  README.md  build.rs
crates/cli/src/: ciphernode.rs  cli.rs  config.rs  config_set.rs  config_setup.rs  events.rs  init.rs  main.rs  net.rs  net_generate.rs  net_get_peer_id.rs  net_purge.rs  net_set.rs  node.rs  nodes.rs  nodes_daemon.rs  nodes_down.rs  nodes_ps.rs  nodes_purge.rs  nodes_restart.rs  nodes_start.rs  nodes_status.rs  nodes_stop.rs  nodes_up.rs  noir.rs  password.rs  password_delete.rs  password_set.rs  print_env.rs  program.rs  purge_all.rs  rev.rs  socket_server.rs  start.rs  wallet.rs  wallet_get.rs  wallet_set.rs
crates/committee-hash/: Cargo.toml
crates/compute-provider/: CHANGELOG.md  Cargo.toml  Readme.md
crates/compute-provider/src/: ciphertext_output.rs  compute_input.rs  compute_manager.rs  lib.rs  merkle_tree.rs  merkle_tree_builder.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/src/: app_config.rs  bfv_config.rs  chain_config.rs  contract.rs  lib.rs  load_config.rs  paths_engine.rs  program_config.rs  rpc.rs  store_keys.rs  validation.rs  yaml.rs
crates/crypto/: CHANGELOG.md  Cargo.toml
crates/crypto/docs/: Cipher.md  Sensitive.md
crates/crypto/src/: cipher.rs  lib.rs  password_manager.rs  secret_holder.rs  sensitive.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: actor.rs  dashboard.html  lib.rs  server.rs  tracing_layer.rs
crates/data/: CHANGELOG.md  Cargo.toml  PersistenceSystem.md  README.md
crates/data/docs/: DataStore.md  Get.md  Persistable.md  Repositories.md  Repository.md  SledStore.md
crates/data/src/: commit_log_event_log.rs  data_store.rs  event_log.rs  event_store.rs  event_store_in_mem.rs  events.rs  hlc_store.rs  in_mem.rs  in_mem_event_log.rs  in_mem_hlc_store.rs  in_mem_kv_store.rs  in_mem_sequence_index.rs  into_key.rs  lib.rs  persistable.rs  repositories.rs  repository.rs  sled_db.rs  sled_sequence_index.rs  sled_store.rs  sled_utils.rs  snapshot.rs  traits.rs  write_buffer.rs
crates/enclaveup/: CHANGELOG.md  Cargo.toml  README.md
crates/enclaveup/src/: main.rs
crates/encrypt/: Cargo.toml
crates/encrypt/src/: lib.rs
crates/entrypoint/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/entrypoint/src/: fence.rs  lib.rs  validate.rs
crates/events/: CHANGELOG.md  Cargo.toml  decryption_key_aggregation.mmd  decryption_share_generation.mmd  node_dht_dkg.mmd  threshold_share_generation.mmd  trbfv_actor_seq.mmd
crates/events/docs/: CiphernodeAdded.md  CiphernodeRemoved.md  CiphernodeSelected.md  ComputeRequestSuccess.md  DecryptionShareCreated.md  Die.md  E3Requested.md  EnclaveEvent.md  EventBus.md  PublickeyAggregated.md  Shutdown.md
crates/events/src/: aggregate_id.rs  bus_handle.rs  chunk.rs  commitment_link.rs  committee.rs  correlation_id.rs  cursor.rs  data_events.rs  e3id.rs  event_context.rs  event_ctx.rs  event_extractor.rs  event_id.rs  event_manager.rs  eventbus.rs  eventbus_factory.rs  events.rs  eventstore.rs  eventstore_router.rs  format_as_hex.rs  formatters.rs  hlc.rs  hlc_factory.rs  id.rs  into_key.rs  lib.rs  ordered_set.rs  prelude.rs  seed.rs  sequencer.rs  span_id.rs  store_keys.rs  sync.rs  traits.rs
crates/evm/: Cargo.toml  EvmSystem.md  build.rs
crates/evm-helpers/: CHANGELOG.md  Cargo.toml  build.rs
crates/evm-helpers/src/: block_listener.rs  contracts.rs  error_decoder.rs  event_listener.rs  events.rs  lib.rs  listener.rs  retry.rs  threshold_queue.rs
crates/evm-helpers/tests/: helpers.rs  integration.rs  listener.rs
crates/evm/docs/: EnclaveSolReader.md  EventReader.md  RegistryFilterSolWriter.md
crates/evm/scripts/: build_fixtures.sh  generate_error_selectors.sh
crates/evm/src/: bonding_registry_sol.rs  ciphernode_registry_sol.rs  committee_sortition_sol.rs  contracts.rs  dkg_attestation_bundle.rs  enclave_sol.rs  enclave_sol_reader.rs  enclave_sol_writer.rs  error_decoder.rs  error_selectors.rs  event_reader.rs  (+23 more)
crates/fhe/: CHANGELOG.md  Cargo.toml
crates/fhe-params/: Cargo.toml  README.md
crates/fs/: CHANGELOG.md  Cargo.toml
crates/greco-helpers/: Cargo.toml
crates/hamt/: Cargo.toml  README.md
crates/indexer/: CHANGELOG.md  Cargo.toml
crates/init/: CHANGELOG.md  Cargo.toml
crates/interfoldup/: Cargo.toml  README.md
crates/keyshare/: CHANGELOG.md  Cargo.toml  KeyshareSystem.md  TODO.md  decryption_key_aggregation.mmd  plaintext_aggregation.mmd  pvw_key_generation.mmd  trbfv_actor_seq.mmd
crates/logger/: CHANGELOG.md  Cargo.toml
crates/multithread/: Cargo.toml
(+2144 files in other folders)
