[workspace]
members = [
  "crates/aggregator", 
  "crates/bfv-helpers",
  "crates/cli",
  "crates/compute-provider",
  "crates/config",
  "crates/crypto",
  "crates/data",
  "crates/enclaveup",
  "crates/entrypoint",
  "crates/events",
  "crates/evm", 
  "crates/evm-helpers",
  "crates/fhe",
  "crates/fs", 
  "crates/indexer",
  "crates/init", 
  "crates/keyshare",
  "crates/logger",
  "crates/net", 
  "crates/program-server", 
  "crates/request",
  "crates/sdk",
  "crates/sortition",
  "crates/support-scripts",
  "crates/test-helpers",
  "crates/tests",
  "crates/wasm",
]
exclude = [
  "examples/CRISP/apps/server",
  "examples/CRISP/apps/program",
  "examples/CRISP/apps/wasm-crypto",
  "examples/default/client/wasm",
  "examples/default",
  # client needs to be able to build crates/support independently
  "crates/support", 
  "crates/support-scripts/dev"
]
resolver = "2"
shared-version = true
pre-release-commit-message = "chore: Release {{crate_name}} v{{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", min=1},
]
post-release-commit-message = "chore: Bump {{crate_name}} to {{next_version}}"
sign-commit = true
sign-tag = true
push-remote = "origin"
publish = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "E3 — Encrypted Execution Environments"
repository = "https://github.com/gnosisguild/enclave"

[workspace.dependencies]
e3-aggregator = { version = "0.1.0", path = "./crates/aggregator" }
e3-bfv-helpers = { version = "0.1.0",  path = "./crates/bfv-helpers" }
e3-config = { version = "0.1.0", path = "./crates/config" }
e3-crypto = { version = "0.1.0", path = "./crates/crypto" }
e3-data = { version = "0.1.0", path = "./crates/data" }
e3-request = { version = "0.1.0", path = "./crates/request" }
e3-sdk = { version = "0.1.0", path = "./crates/sdk" }
e3-cli = { version = "0.1.0", path = "./crates/cli" }
e3-entrypoint = { version = "0.1.0", path = "./crates/entrypoint" }
e3-init = { version = "0.1.0", path = "./crates/init" }
e3-events = { version = "0.1.0", path = "./crates/events" }
e3-evm = { version = "0.1.0", path = "./crates/evm" }
e3-evm-helpers = { version = "0.1.0", path = "./crates/evm-helpers" }
e3-fhe = { version = "0.1.0", path = "./crates/fhe" }
e3-fs = { version = "0.1.0", path = "./crates/fs" }
e3-indexer = { version = "0.1.0", path = "./crates/indexer" }
e3-keyshare = { version = "0.1.0", path = "./crates/keyshare" }
e3-logger = { version = "0.1.0", path = "./crates/logger" }
e3-net = { version = "0.1.0", path = "./crates/net" }
e3-compute-provider = { version = "0.1.0", path = "./crates/compute-provider" }
e3-sortition = { version = "0.1.0", path = "./crates/sortition" }
e3-program-server = { version = "0.1.0", path = "./crates/program-server" }
e3-support-scripts = { version = "0.1.0", path = "./crates/support-scripts" }
e3-test-helpers = { version = "0.1.0", path = "./crates/test-helpers" }
e3-tests = { version = "0.1.0", path = "./crates/tests" }

actix = "0.13.5"
actix-web = "4.10.2"
aes-gcm = "0.10.3"
alloy = { version = "1.0.11", features = ["node-bindings", "full"] }
alloy-primitives = { version = "1.0", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-sol-types = "1.0"
alloy-dyn-abi = "1.1.0"
argon2 = "0.5.2"
anyhow = "1.0.86"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
async-recursion = "1.1.1"
bincode = "1.3.3"
bloom = "0.3.2"
bs58 = "0.5.1"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
compile-time = "0.2.0"
dirs = "5.0.1"
dialoguer = "0.11.0"
duct = "1.0.0"
eyre = { version = "0.6.12" }
fhe_rs = { package = "fhe", git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs.git" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs" }
figment = { version = "0.10.19", features = ["yaml", "test"] }
futures = "0.3.30"
futures-util = "0.3"
glob = "0.3.2"
git2 = "0.20.2"
hex = "0.4.3"
jsonrpsee = { version = "0.25.1", features = ["http-client"] }
lazy_static = "1.5.0"
num = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2"
once_cell = "1.19.0"
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.29.0"
opentelemetry-stdout = "0.29.0"
path-clean = "1.0.1"
petname = "2.0.2"
phf = { version = "0.11", features = ["macros"] }
rand_chacha = "0.3.1"
rand = "0.8.5"
regex = "1.11.1" 
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.133"
sled = "0.34.7"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tempfile = "3.20.0"
thiserror =  { version = "1.0.58" }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
url = "2.5.4"
vfs = { git = "https://github.com/ryardley/rust-vfs.git", features = ["async-vfs"] }
libp2p = { version = "0.54.1", features = [
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "ping",
  "quic",
  "tokio",
]}
zeroize = "1.6.0"
