[workspace]
members = [
  "crates/aggregator", 
  "crates/bfv-helpers",
  "crates/ciphernode-builder",
  "crates/cli",
  "crates/compute-provider",
  "crates/config",
  "crates/crypto",
  "crates/data",
  "crates/enclaveup",
  "crates/entrypoint",
  "crates/events",
  "crates/evm", 
  "crates/evm-helpers",
  "crates/fhe",
  "crates/fs", 
  "crates/indexer",
  "crates/init", 
  "crates/keyshare",
  "crates/logger",
  "crates/multithread",
  "crates/net", 
  "crates/program-server", 
  "crates/request",
  "crates/sdk",
  "crates/sortition",
  "crates/support-scripts",
  "crates/test-helpers",
  "crates/tests",
  "crates/trbfv",
  "crates/utils",
  "crates/wasm",
]
exclude = [
  "examples/CRISP",
  "examples/CRISP/server",
  "examples/CRISP/program",
  # client needs to be able to build crates/support independently
  "crates/support", 
  "crates/support-scripts/dev",
  "templates/default"
]
resolver = "3"
msrv = "1.86.0"
shared-version = true
pre-release-commit-message = "chore: Release {{crate_name}} v{{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", min=1},
]
post-release-commit-message = "chore: Bump {{crate_name}} to {{next_version}}"
sign-commit = true
sign-tag = true
push-remote = "origin"
publish = true

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "LGPL-3.0-only"
description = "E3 — Encrypted Execution Environments"
repository = "https://github.com/gnosisguild/enclave"

[workspace.dependencies]
e3-aggregator = { version = "0.1.5", path = "./crates/aggregator" }
e3-bfv-helpers = { version = "0.1.5",  path = "./crates/bfv-helpers" }
e3-config = { version = "0.1.5", path = "./crates/config" }
e3-ciphernode-builder = { version = "0.1.5", path = "./crates/ciphernode-builder" }
e3-crypto = { version = "0.1.5", path = "./crates/crypto" }
e3-data = { version = "0.1.5", path = "./crates/data" }
e3-request = { version = "0.1.5", path = "./crates/request" }
e3-sdk = { version = "0.1.5", path = "./crates/sdk" }
e3-cli = { version = "0.1.5", path = "./crates/cli" }
e3-entrypoint = { version = "0.1.5", path = "./crates/entrypoint" }
e3-init = { version = "0.1.5", path = "./crates/init" }
e3-events = { version = "0.1.5", path = "./crates/events" }
e3-evm = { version = "0.1.5", path = "./crates/evm" }
e3-evm-helpers = { version = "0.1.5", path = "./crates/evm-helpers" }
e3-fhe = { version = "0.1.5", path = "./crates/fhe" }
e3-fs = { version = "0.1.5", path = "./crates/fs" }
e3-indexer = { version = "0.1.5", path = "./crates/indexer" }
e3-multithread = { version = "0.1.5", path = "./crates/multithread" }
e3-keyshare = { version = "0.1.5", path = "./crates/keyshare" }
e3-logger = { version = "0.1.5", path = "./crates/logger" }
e3-net = { version = "0.1.5", path = "./crates/net" }
e3-compute-provider = { version = "0.1.5", path = "./crates/compute-provider" }
e3-sortition = { version = "0.1.5", path = "./crates/sortition" }
e3-program-server = { version = "0.1.5", path = "./crates/program-server" }
e3-support-scripts = { version = "0.1.5", path = "./crates/support-scripts" }
e3-test-helpers = { version = "0.1.5", path = "./crates/test-helpers" }
e3-tests = { version = "0.1.5", path = "./crates/tests" }
e3-trbfv = { version = "0.1.5", path = "./crates/trbfv" }
e3-utils = { version = "0.1.5", path = "./crates/utils" }

actix = "=0.13.5"
actix-web = "=4.11.0"
aes-gcm = "=0.10.3"
alloy = { version = "=1.0.41", features = ["node-bindings", "full"] }
alloy-primitives = { version = "=1.3.0", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-sol-types = "=1.3.0"
alloy-dyn-abi = "=1.3.0"
argon2 = "=0.5.3"
anyhow = "=1.0.98"
async-std = { version = "=1.13.1", features = ["attributes"] }
async-trait = "=0.1.88"
async-recursion = "=1.1.1"
bincode = "=1.3.3"
bloom = "=0.3.2"
bs58 = "=0.5.1"
base64 = "=0.22.1"
clap = { version = "=4.5.41", features = ["derive"] }
chrono = { version = "=0.4.41", features = ["serde"] }
compile-time = "=0.2.0"
derivative = "=2.2.0"
dirs = "=5.0.1"
dialoguer = "=0.11.0"
duct = "=1.0.0"
eyre = { version = "=0.6.12" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs.git" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs" }
figment = { version = "=0.10.19", features = ["yaml", "test"] }
futures = "=0.3.31"
futures-util = "=0.3.31"
glob = "=0.3.2"
git2 = "=0.20.2"
greco = { package = "e3-greco-generator", git = "https://github.com/gnosisguild/greco" } 
hex = "=0.4.3"
lazy_static = "=1.5.0"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
ndarray = { version = "=0.15.6", features = ["serde"] }
once_cell = "=1.21.3"
opentelemetry = "=0.29.0"
opentelemetry-otlp = { version = "=0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "=0.29.0"
opentelemetry-stdout = "=0.29.0"
path-clean = "=1.0.1"
petname = "=2.0.2"
phf = { version = "=0.11.3", features = ["macros"] }
proptest = "=1.9.0"
rand_chacha = "=0.3.1"
rand = "=0.8.5"
rayon = "=1.10.0"
regex = "=1.11.1" 
reqwest = { version = "=0.12.22", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
serde_json = "=1.0.141"
serial_test = "=3.2.0"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
shellexpand = "=3.1.1"
sled = "=0.34.7"
strum = { version = "=0.27.2", features = ["derive"] }
tempfile = "=3.20.0"
thiserror =  { version = "=1.0.69" }
tokio = { version = "=1.46.1", features = ["full"] }
tracing = "=0.1.41"
tracing-opentelemetry = "=0.30.0"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "time"] }
tracing-test = { version = "=0.2.5", features = ["no-env-filter"] }
url = "=2.5.4"
vfs = { git = "https://github.com/ryardley/rust-vfs.git", features = ["async-vfs"] }
libp2p = { version = "=0.54.1", features = [
  "gossipsub",
  "identify",
  "dns",
  "kad",
  "macros",
  "mdns",
  "ping",
  "quic",
  "tokio",
]}
zeroize = "=1.8.1"

