[package]
name = "e3-aggregator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Aggregators"
repository = "https://github.com/gnosisguild/enclave/crates/aggregator"

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
e3-config = { workspace = true }
async-trait = { workspace = true }
e3-events = { workspace = true }
e3-fhe = { workspace = true }
e3-sortition = {  workspace = true }
e3-request = { workspace = true }
e3-data = { workspace = true }
tracing = { workspace = true }
