[package]
name = "e3-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Aggregators"
repository = "https://github.com/gnosisguild/enclave/crates/aggregator"

[dependencies]
actix = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
e3-config = { workspace = true }
e3-data = { workspace = true }
e3-events = { workspace = true }
e3-evm = { workspace = true }
e3-fhe = { workspace = true }
e3-multithread = { workspace = true }
e3-trbfv = { workspace = true }
e3-request = { workspace = true }
e3-sortition = {  workspace = true }
e3-utils = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
