[package]
name = "e3-bfv-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave BFV Helpers"
repository = "https://github.com/gnosisguild/enclave/crates/bfv-helpers"

[dependencies]
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true }
fhe-traits.workspace = true
fhe.workspace = true
rand.workspace = true
bincode.workspace = true
anyhow.workspace = true
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs" }
greco = { package = "zkfhe-greco", git = "https://github.com/gnosisguild/zkfhe-generator", version = "0.1.0"}

[dev-dependencies]
hex.workspace = true
