[package]
name = "e3-bitquery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Bitquery API client"
repository = "https://github.com/gnosisguild/enclave/crates/bitquery"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }