[package]
name = "e3-ciphernode-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Ciphernode Builder"
repository = "https://github.com/gnosisguild/enclave/crates/ciphernode-builder"

[dependencies]
actix.workspace = true
alloy.workspace = true
anyhow.workspace = true
derivative.workspace = true
e3-aggregator.workspace = true
e3-crypto.workspace = true
e3-config.workspace = true
e3-data.workspace = true
e3-events.workspace = true
e3-evm.workspace = true
e3-fhe.workspace = true
e3-keyshare.workspace = true
e3-multithread.workspace = true
e3-request.workspace = true
e3-sortition.workspace = true
e3-utils.workspace = true
tracing.workspace = true
