[package]
name = "e3-cli"
version.workspace = true
edition.workspace = true
description = ": coordinates the encryption and decryption of enclave computations"
repository = "https://github.com/gnosisguild/enclave"

[[bin]]
name = "enclave"
path = "src/main.rs"

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
compile-time = { workspace = true }
e3-config = { workspace = true }
e3-crypto = { workspace = true }
dialoguer = { workspace = true }
e3-entrypoint = { workspace = true }
e3-init = { workspace = true }
e3-events = { workspace = true }
hex = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
petname = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true } 
tracing-subscriber = { workspace = true } 
url = { workspace = true }
zeroize = { workspace = true }
