[package]
name = "e3-compute-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Copmute Provider"
repository = "https://github.com/gnosisguild/enclave/crates/compute-provider"

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }
lean-imt = "=0.1.2"
sha3 = "=0.10.8"
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
hex = "=0.4.3"
light-poseidon = "=0.2.0"
ark-ff = "=0.4.2"
ark-bn254 = "=0.4.0"
rayon = "=1.10.0"
