[package]
name = "e3-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Configuration"
repository = "https://github.com/gnosisguild/enclave/crates/config"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
e3-events = { workspace = true }
figment = { workspace = true }
path-clean = { workspace = true }
petname = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
shellexpand = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

