[package]
name = "e3-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Cryptography Library"
repository = "https://github.com/gnosisguild/enclave/crates/cryptography"

[dependencies]
aes-gcm = { workspace = true }
argon2  = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
e3-config = { workspace = true }
async-trait = { workspace = true }
