[package]
name = "e3-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Cryptography Library"
repository = "https://github.com/gnosisguild/enclave/crates/cryptography"

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
argon2  = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
zeroize = { workspace = true }
