[package]
name = "e3-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Embedded Web Dashboard"
repository = "https://github.com/gnosisguild/enclave"

[dependencies]
actix.workspace = true
actix-web.workspace = true
anyhow.workspace = true
chrono.workspace = true
e3-events.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
