[package]
name = "e3-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight node monitoring dashboard for Enclave ciphernodes"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
