[package]
name = "e3-data"
version = "0.1.1-alpha.0"
edition.workspace = true
license.workspace = true
description = "E3 - Ciphernode Data persistence"
repository = "https://github.com/gnosisguild/enclave/crates/data"

[dependencies]
actix = { workspace = true }
e3-events = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
