[package]
name = "enclaveup"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Installer for the Enclave CLI tool"
repository = "https://github.com/gnosisguild/enclave"

[[bin]]
name = "enclaveup"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.0"
tar = "0.4"
directories = "6.0.0" 