[package]
name = "e3-encrypt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "E3 - Verifiable Encryption utilities"
repository = "https://github.com/gnosisguild/enclave/crates/encrypt"

[dependencies]
anyhow.workspace = true
fhe-traits.workspace = true
fhe_rs.workspace = true
rand.workspace = true
e3-bfv-helpers.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

fhe-util = { git = "https://github.com/gnosisguild/fhe.rs" }
greco = { package = "e3-greco-generator", git = "https://github.com/gnosisguild/greco" } 
