[package]
name = "e3-entrypoint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "E3 - CLI Entrypoints"
repository = "https://github.com/gnosisguild/enclave/crates/entrypoint"
build = "build.rs"

[dependencies]
actix = { workspace = true }
e3-aggregator = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
e3-config = { workspace = true }
clap = { workspace = true }
e3-crypto = { workspace = true }
e3-data = { workspace = true }
dirs = { workspace = true }
e3-events = { workspace = true }
e3-evm = { workspace = true }
e3-fhe = { workspace = true }
hex = { workspace = true }
e3-keyshare = { workspace = true }
e3-logger = { workspace = true }
libp2p = { workspace = true }
e3-net = { workspace = true }
phf = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
e3-request = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
e3-sortition = { workspace = true }
e3-test-helpers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
