[package]
name = "e3-events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event management for E3 Ciphernodes"
repository = "https://github.com/gnosisguild/enclave/crates/events"

[dependencies]
actix = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bloom = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
e3-crypto = { workspace = true }
e3-trbfv = { workspace = true }
e3-utils = { workspace = true }

[features]
test-helpers = [] # ensure test-helpers is available for integration tests

[dev-dependencies]
proptest = { workspace = true }
e3-events = { workspace = true, features = ["test-helpers"] }

