[package]
name = "e3-evm-helpers"
version = "0.1.1-alpha.0"
edition.workspace = true
license.workspace = true
description = "E3 - Enclave EVM Helpers"
repository = "https://github.com/gnosisguild/enclave/crates/evm-helpers"

[dependencies]
alloy.workspace = true
async-trait.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
