[package]
name = "e3-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode EVM Connectors"
repository = "https://github.com/gnosisguild/enclave/crates/evm"
publish = false

[dependencies]
actix = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bloom = { workspace = true }
e3-config = { workspace = true }
e3-crypto = { workspace = true }
e3-data = { workspace = true }
e3-events = { workspace = true }
e3-fhe-params = { workspace = true }
e3-sortition = { workspace = true }
e3-trbfv = { workspace = true }
e3-utils = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
e3-evm = { workspace = true }
e3-entrypoint = { workspace = true }
e3-ciphernode-builder = { workspace = true }
e3-test-helpers = { workspace = true }
e3-events = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
