[package]
name = "e3-fhe-params"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave FHE Params"
repository = "https://github.com/gnosisguild/enclave/crates/fhe-params"

[dependencies]
e3-utils = { workspace = true }
fhe = { workspace = true }
fhe-traits = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
alloy-dyn-abi = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
serde = { workspace = true }
rand_chacha = "0.3.1"

[dev-dependencies]
fhe-traits = { workspace = true }

[[bin]]
name = "search_params"
path = "src/bin/search_params.rs"

[features]
default = []
abi-encoding = ["dep:alloy-dyn-abi", "dep:alloy-primitives"]
